Wed May 18 09:09:32 1994  Jeff Law  (law@snake.cs.utah.edu)

	* elf32-hppa.h (R_HPPA_ABS_CALL): Define.
	* elf32-hppa.c (hppa_elf_gen_reloc_type): Handle absolute calls.

	* som.h (R_HPPA_ABS_CALL): Define.
	* som.c (hppa_som_gen_reloc_type): Delete complex relocation types.

Tue May 17 19:33:12 1994  Ken Raeburn  (raeburn@cujo.cygnus.com)

	* coff-i960.c (icoff_little_vec, icoff_big_vec): Indicate leading
	underscore, for compatibility with Intel tool chain (gnu960v2).

Mon May 16 10:09:22 1994  Jeff Law  (law@snake.cs.utah.edu)

	* bfd-in2.h: Rebuilt.

	* elf32-hppa.c: Change .hppa_linker_stubs to .PARISC.stubs,
	likewise for other PA specific sections.
	(hppa_elf_relocate_unwind_table): Delete unused
	function.
	(elf_hppa_howto_table): Completely new table based on 94-02-02
	draft PA ELF spec.  Change relocation tags appropriately
	throughout elf32-hppa.c
	(hppa_elf_gen_reloc_type): Rewrite and simplify based on 94-02-02
	spec.
	(hppa_elf_reloc): Likewise.
	(hppa_look_for_stubs_in_section): Likewise
	(ELF_MACHINE_CODE): Change to EM_PARISC.
	* elf32-hppa.h: Include "elf/hppa.h".  Change relocation tags 
	appropriately throughout elf32-hppa.h.
	(elf32_hppa_reloc_type): New table based on 94-02-02 draft PA ELF
	spec.
	(R_HPPA_ABS_CALL, R_HPPA_COMPLEX*, R_HPPA_UNWIND): Delete definitions.
	* elfcode.h (prep_headers): Use EM_PARISC instead of EM_HPPA.
	* reloc.c (bfd_reloc_code_real): Delete unused HPPA relocations.
	* som.h (R_HPPA_ABS_CALL, R_HPPA_COMPLEX): Delete definitions.

	* libhppa.h (hppa_field_adjust): Avoid adding constant_value into
	the final value twice for LR and RR field selectors.

Sat May 14 09:09:19 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* aoutx.h (add_to_stringtab): Use BFD_ASSERT not assert.  This
	avoids __eprintf troubles.

Fri May 13 10:51:21 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* bout.c (b_out_bfd_reloc_type_lookup): Handle BFD_RELOC_CTOR.

	* config/mipsbelf.mt (SELECT_VECS): Add ecoff_big_vec and